--- a/manifest.plist
+++ b/manifest.plist
@@ -17,7 +17,7 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://nazdov.github.io/icon.png</string>
+					<string>https://nazdov.github.io/Icon.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
